[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/BigNoodleTitlingCyr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/themes/textbox_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/scenes/scene_player/ScenePlayer.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/backgrounds/dani_bedroom.jpg" type="Texture" id=4]
[ext_resource path="res://src/objects/TextBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/scene_player/CharacterDisplayer.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "setup"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 1 )

[node name="ScenePlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="CharacterDisplayer" parent="." instance=ExtResource( 6 )]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
color = Color( 0, 0, 0, 1 )

[node name="TextBox" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "setup"
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )
anims/setup = SubResource( 3 )

[node name="RestartLabel" type="Label" parent="."]
margin_right = 1920.0
margin_bottom = 784.0
custom_fonts/font = SubResource( 4 )
text = "Сцена окончена. Нажмите R для её перезапуска."
align = 1
valign = 1
